my-apps/development/news-reader/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-reader
  namespace: news-reader
spec:
  selector:
    app: news-reader
  ports:
    - port: 3000
      targetPort: http
      name: http
  type: ClusterIP
